--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <img src="./assets/linkedin.png">
                     Linkedin
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://twitch.tv/alison_bezerra">
+                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/alison_bezerra/">
                     <img src="./assets/instagram.png">
                     Instagram
                 </a>
@@ -47,7 +47,7 @@
         <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto da ***** ***** programando">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Alura.</p>
+        <p>Desenvolvido por Alison Bezerra.</p>
     </footer>
 </body>
 
